
*HAVP 0.88 released
 - ClamAV library 0.93 support (recompile needed, new option CLAMMAXSCANSIZE)
 - CLAMMAXFILESIZE default is now 100MB (so 0.93 even starts scanning big files)
 - Fix random seed issue (ClamAV generated some temporary file errors)
 - Added DISABLELOCKINGFOR config (fix for ZIP handling in ClamAV 0.93)
 - Arcavir version 2008 support (set ARCAVIRVERSION)
 - Log scanner errors to errorlog
 - Relaxed SSL/CONNECT port limits
   (It is _not_ recommended to use --enable-ssl-tunnel, you should use Squid)

*HAVP 0.87 released
 - DrWeb scanner support
 - F-Prot support for v6.0 added (also check FPROTOPTIONS)
 - If false, X_FORWARDED_FOR drops also Via: header for privacy
 - Fix Avast and AVG bugs
 - Templates support <!--url--> and <!--clientip--> tags
 - Uses supplementary groups for user if defined
 - Added TRICKLINGBYTES config
 - Reduced *MAXFILES settings to 50 for performance
 - Add missing HTTP methods (MKACTIVITY, CHECKOUT, MERGE) 

*HAVP 0.86 released
 - Experimental support for chunked Transfer-Encoding, fixes some broken sites
 - Added IGNOREVIRUS config for whitelisting virus names
 - Added CLAMBLOCKBROKEN config
 - Improve detection with AVG, only Viruses were found, not Trojans etc
 - HAVP is killed if database reloading fails for Library Scanner
 - Log URL when crashed scanner process detected, for troubleshooting
 - Build system updated (--prefix --sbindir --sysconfdir --localstatedir)

*HAVP 0.85 released
 - Added support for ClamAV 0.90 library
   (once compiled for it, older library versions not supported)

*HAVP 0.84 released
 - Fix bug in tcp buffer, requests could leak to other clients sometimes
 - Support for Arcavir scanner
 - Support for multiple IPs in hostnames, all are tried if necessary
 - Pass Proxy-Authorization header to parent proxy (thanks Mateus)
 - Ignore scanner errors if MAXSCANSIZE reached (thanks Vittorio)
 - Build system polished a bit (--prefix supported)